# smplabs

./: .env.example  compose.override.yaml  compose.traefik.yaml  compose.yaml  init-zitadel-db.sh
backend/: .gitignore  Dockerfile  README.md  db.sqlite  pyproject.toml
backend/app/: main.py  migrate.py
backend/app/api/: __init__.py  auth.py
backend/app/api/v1/: __init__.py  campaign.py  transactions.py  users.py
backend/app/core/: config.py  database.py  fastapi_users_db_aiosqlite.py  users.py
backend/app/interfaces/: unit_of_work.py
backend/app/interfaces/repository/: campaign_repo.py  transaction_repo.py  user_repo.py
backend/app/repository/: campaign_repo.py  transaction_repo.py  unit_of_work.py  user_repo.py
backend/app/schemas/: campaign.py  transaction.py  user.py
backend/app/services/: campaign_service.py  transaction_service.py  user_service.py
backend/migrations/: db-init.sql
frontend/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/campaigns/: +page.svelte  +page.ts
frontend/src/routes/campaigns/create/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
