[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users>=15.0.5",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D100", "D101", "D102", "D103", "D203", "D213", "D104", "D105", "D106", "D107", "COM812"]
